--- a/nav.css
+++ b/nav.css
@@ -26,6 +26,46 @@
 }
 
 
+.dropDown {
+
+	position:relative;
+	
+}
+
+.dropDown-content {
+
+	display:none;
+	position:absolute;
+	background-color: #E12D28;
+	min-width: 160px;
+	z-index: 5;
+	list-style-type:  none;
+}
+
+.dropDown-content li {
+	list-style-type:  none;
+}
+
+.dropDown-content a{
+
+	color: orange;
+	display:block;
+	text-decoration: none;
+	padding: 12px 16px;
+}
+
+
+.dropDown-content a:hover { 
+	color:#1FB129;
+
+}
+
+.dropDown:hover .dropDown-content{
+	display:block;
+
+}
+
+
 #footerNavRow {
 	margin-top:2px;
 	display: block;
@@ -33,7 +73,6 @@
 	color:white;
 	
 }
-
 
 #footerMenu, a {
 color:#F7E2E1;
@@ -47,4 +86,6 @@ color:#1FB129;
    #footerMenu {
        display: none !important;
    }
+
+   
 }
