--- a/styles.css
+++ b/styles.css
@@ -17,12 +17,14 @@ body {
 	
 	
 	margin-top:2px;
-	height:200px;
+	min-height:200px;
+	height:auto;
 }
 
 #thirdRow {
 	margin-top:2px;	
-	height:200px;
+	min-height:200px;
+	height:100%;
 	justify-content: center;
 	
 }
@@ -69,6 +71,7 @@ background-color: darkgray;
 
 .mainContent {
 background-color: lightgray;
+
 }
 
 .belowFold {
@@ -77,5 +80,33 @@ background-color: lightgray;
 }
 
 
+@media only screen and (max-width: 768px) {
+   
 
+#secondRow {
+	
+
+	height:100%;
+	min-height: 200px;
+}
+
+#thirdRow {
+	
+	height:100%;
+	min-height: 200px;
+	
+	
+}
+
+#fourthRow {
+	
+	height:100%;
+	min-height: 200px;
+	
+
+
+}
+
+
+   }
 
